added finishing touches before contest submission

--- a/index.html
+++ b/index.html
@@ -1017,6 +1017,9 @@
     border-top: solid #ccc 3px;
     border-bottom: solid #ccc 3px;
     height: 2rem;
+    position: absolute;
+    top: -11rem;
+    width: 10rem;
   }
 
   .setup p{
@@ -1045,7 +1048,7 @@
       <a href="#" class="logo">
         <h3>The Tobias Foundation</h3>
       </a>
-      <a href="#"><span class="donate">Donate</span></a>
+      <a href="#"><span class="donate" onclick="show(0)">Donate</span></a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
       <a href="#" class="active">Home</a>
@@ -1228,7 +1231,7 @@
     <div class="footer">
       <div class="footer-text">
         <h4>Coded by Christopher Shaw</h4>
-        <a href="#">View github</a>
+        <a href="https://github.com/FramedGames1" target="_blank">View github</a>
       </div>
     </div>
 
